--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "vuex-class": "^0.3.1",
+    "postcss-css-variables": "^0.11.0"
   }
 }
