--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "markdown-it": "^8.4.2",
+    "marked": "^0.6.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-class-component": "^6.0.0",
@@ -18,16 +18,16 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@types/markdown-it": "0.0.7",
+    "@types/marked": "^0.6.0",
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-pwa": "^3.3.0",
     "@vue/cli-plugin-typescript": "^3.3.0",
     "@vue/cli-service": "^3.3.0",
     "node-sass": "^4.9.0",
+    "postcss-css-variables": "^0.11.0",
     "sass-loader": "^7.0.1",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.21",
-    "vuex-class": "^0.3.1",
-    "postcss-css-variables": "^0.11.0"
+    "vuex-class": "^0.3.1"
   }
 }
