--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#37474f",
   "theme_color": "#37474f"
